# n-vkcpp

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
examples/: CMakeLists.txt
examples/box2d_mediapipe/: CMakeLists.txt  README.md  hand.py  main.cpp
examples/box2d_mediapipe/box/: CMakeLists.txt  box_manager.cpp  box_manager.h  box_object.cpp  box_object.h
examples/box2d_mediapipe/class/: CMakeLists.txt  application.cpp  application.h
examples/box2d_mediapipe/hand/: CMakeLists.txt  hand_input.cpp  hand_input.h  hand_object.cpp  hand_object.h
examples/painting/: CMakeLists.txt
examples/painting/class/: application.cpp  application.h  brush.cpp  brush.h  picture.cpp  picture.h  population.cpp  population.h
src/: CMakeLists.txt
src/vkcpp/: CMakeLists.txt  vkapp.cpp  vkapp.h  vkcpp.h  vulkan_header.h
src/vkcpp/device/: device.h  instance.cpp
src/vkcpp/object/: object2d.cpp  object2d.h
src/vkcpp/object/camera/: camera.cpp  camera.h  main_camera.cpp  main_camera.h
src/vkcpp/render/command/: command_buffers.cpp
src/vkcpp/render/image/: image.cpp  image2d.cpp  offscreen.cpp
src/vkcpp/render/pipeline/: graphics_pipeline.cpp
src/vkcpp/render/swapchain/: swapchain.cpp
src/vkcpp/utility/: utility.cpp
src/vkcpp/window/: main_window.cpp  main_window.h
test/: CMakeLists.txt
test/3DObject/: CMakeLists.txt  main.cpp
